# ai-researcher

./: CLAUDE.md  README.md  conftest.py  pyproject.toml
.specify/: init-options.json
.speckit-ralph/: guardrails.md
.speckit-ralph/tdd/: behaviors.md  config.yaml  interfaces.md
config/: context-prompt.txt  settings.yaml  sources.yaml
infra/stacks/: __init__.py  pipeline_stack.py
prds/: prd-agentic-sdlc-research-agent.md
specs/001-agentic-sdlc-intelligence/: data-model.md  plan.md  progress.txt  quickstart.md  research.md  spec.md  tasks.md
src/briefing/: handler.py
src/ingestion/: config.py  handler.py
src/monitoring/: handler.py
src/scoring/: deduplication.py  handler.py
src/shared/: config.py  models.py
src/transcription/: handler.py
tests/unit/: test_briefing_threshold_filtering.py  test_cloudwatch_metrics_namespace.py  test_consecutive_source_failure_tracking.py  test_context_prompt_hot_reload.py  test_cost_alert_notification.py  test_deduplication_five_sources.py  test_delivery_reliability_metrics.py  test_ingestion_error_isolation.py  test_pipeline_completion_logging.py  test_pipeline_run_metadata.py  test_podcast_budget_cap.py  test_podcast_ingestion.py  test_podcast_transcription.py  test_priority_ordered_ingestion.py  test_s3_lifecycle_retention.py  test_scoring_relevance.py  test_scoring_reliability.py  test_scoring_urgency_classification.py  test_seed_source_list.py  test_semantic_deduplication.py  test_semantic_deduplication_different_angles.py  test_source_config_new_entry.py  test_source_config_validation.py  test_x_api_ingestion.py  (+6 more)
(+121 files in other folders)
